--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Add your keys here and rename the file to `.env`
 # warning: variables prefixed with GATSBY_ will be made available to client-side code
 
-ALGOLIA_APP_ID=XXX
-ALGOLIA_SEARCH_KEY=XXX
+GATSBY_ALGOLIA_APP_ID=XXX
+GATSBY_ALGOLIA_SEARCH_KEY=XXX
 ALGOLIA_ADMIN_KEY=XXX
-ALGOLIA_INDEX_NAME=XXX
+GATSBY_ALGOLIA_INDEX_NAME=XXX
