Replace info for environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 # Add your keys here and rename the file to `.env`
-# warning: variables prefixed with GATSBY_ will be made available to client-side code
+# WARNING: variables prefixed with GATSBY_ will be made available to client-side code
 
+#GENERAL
+GATSBY_FRONTEND_URL=your_URL
+
+#DISQUS
+GATSBY_DISQUS_SHORTNAME=your_disqus_shortname
+
+#ALGOLIA
 GATSBY_ALGOLIA_APP_ID=XXX
 GATSBY_ALGOLIA_SEARCH_KEY=XXX
 ALGOLIA_ADMIN_KEY=XXX
