--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-algolia-search": "0.5.0",
     "gatsby-plugin-manifest": "^2.2.25",
+    "gatsby-plugin-netlify-cms": "^4.1.28",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.34",
@@ -27,6 +28,7 @@
     "gatsby-transformer-sharp": "^2.3.1",
     "gsap": "^3.0.1",
     "lazysizes": "^5.1.2",
+    "netlify-cms-app": "^2.9.7",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
