--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "lcnogueira-website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "My personal website on lcnogueira.com",
+  "version": "1.0.0",
+  "author": "Luiz Cláudio <luizcns18@gmail.com>",
   "dependencies": {
     "algoliasearch": "^3.35.1",
     "babel-plugin-styled-components": "^1.10.6",
@@ -58,9 +58,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/lcnogueira/lcnogueira.com"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/lcnogueira/lcnogueira.com/issues"
   }
 }
