Delete fake posts and update tags list

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,6 +41,17 @@ collections:
           widget: 'select',
           multiple: true,
           options:
-            ['html', 'css', 'js', 'react', 'node', 'vscode', 'docker', 'git'],
+            [
+              'css',
+              'docker',
+              'gatsby',
+              'git',
+              'html',
+              'js',
+              'misc',
+              'nodejs',
+              'reactjs',
+              'vscode',
+            ],
         }
       - { label: 'Body', name: 'body', widget: 'markdown' }
