style: Update tags colors and first post tags

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,8 +49,8 @@ collections:
               'html',
               'js',
               'misc',
-              'nodejs',
-              'reactjs',
+              'node',
+              'react',
               'vscode',
             ],
         }
