Update tags list

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -49,6 +49,7 @@ collections:
               'html',
               'js',
               'misc',
+              'my_year',
               'node',
               'react',
               'vscode',
