--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-sitemap": "^2.2.20",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-plugin-transition-link": "^1.16.2",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.1.29",
     "gatsby-remark-lazy-load": "^1.0.2",
     "gatsby-remark-prismjs": "^3.3.21",
