--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ public_folder: 'assets/img' # The src attribute for uploaded media will begin wi
 slug:
   encoding: 'ascii'
   clean_accents: true
-  sanitize_replacement: '_'
+  sanitize_replacement: '-'
 
 collections:
   - name: 'posts' # Used in routes, e.g., /admin/collections/posts
