Update tags and color

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -43,15 +43,19 @@ collections:
           options:
             [
               'css',
+              'react',
+              'nextjs',
+              'jest',
+              'react-testing-library',
+              'typescript',
+              'js',
               'docker',
               'gatsby',
               'git',
               'html',
-              'js',
               'misc',
               'my_year',
               'node',
-              'react',
               'vscode',
             ],
         }
