--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "algoliasearch": "^3.35.1",
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.17.6",
+    "gatsby": "2.20.4",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-algolia-search": "0.5.0",
     "gatsby-plugin-manifest": "^2.2.25",
@@ -31,6 +31,7 @@
     "gsap": "^3.0.1",
     "lazysizes": "^5.1.2",
     "netlify-cms-app": "^2.9.7",
+    "netlify-plugin-gatsby-cache": "^0.3.2",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -50,7 +51,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "develop_playground": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
